<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".screens.AssignmentsActivity">

    <include layout="@layout/assignments_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <LinearLayout
            android:id="@+id/current_layout"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/assignment_drawable_green"
            android:elevation="5dp"
            android:gravity="center">

            <TextView

                android:id="@+id/current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Current"
                android:textColor="@color/white"
                android:textSize="@dimen/Size3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/past_layout"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/assignment_drawalbe"
            android:elevation="5dp"
            android:gravity="center">

            <TextView

                android:id="@+id/past"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/past"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/Size3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/payment_layout"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@drawable/assignment_drawalbe"
            android:elevation="5dp"
            android:gravity="center">

            <TextView
                android:id="@+id/payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Payment"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/Size3" />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>


</LinearLayout>