<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_width="match_parent">
<include layout="@layout/common_toolbar_with_no_button"/>

    <androidx.cardview.widget.CardView

        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:translationZ="3dp"
        android:elevation="5dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="8dp"
        card_view:contentPadding="3dp">

        <RelativeLayout
            android:id="@+id/updateInfo"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/updateInfo"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/Size4" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:src="@mipmap/right_arrow" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:translationZ="3dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="8dp"
        card_view:contentPadding="3dp">

        <RelativeLayout
            android:id="@+id/change_password"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_centerVertical="true"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/change_password"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/Size4" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:src="@mipmap/right_arrow" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:translationZ="3dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="8dp"
        card_view:contentPadding="3dp">

        <RelativeLayout
            android:id="@+id/contact_admin"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/contact_admin"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/Size4" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:src="@mipmap/right_arrow" />
        </RelativeLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:translationZ="3dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="8dp"
        card_view:contentPadding="3dp">

        <RelativeLayout
            android:id="@+id/logout"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_centerVertical="true"
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/logout"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/Size4" />



        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>


